--- a/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="PortfolioAce.Views.Windows.SecurityManagerWindow"
+﻿<Window x:Class="PortfolioAce.Views.Modals.SecurityManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PortfolioAce.Views.Windows"
+        xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
         Title="Security Manager" Height="370" Width="440">
     <Grid>
