--- a/PortfolioAce/Views/Modals/AddFundWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddFundWindow.xaml
@@ -6,9 +6,45 @@
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="Create a New Fund" Height="261" Width="410">
+        Title="Create a New Fund" Height="280" Width="410">
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <Grid Margin="1">
+            <Grid.Resources>
+                <!-- HERE i can set properties for all similar objects in the grid i.e. textboxes-->
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="2" />
+                    <Setter Property="Padding" Value="2" />
+                    <Setter Property="Background" Value="White"/>
+                    <Setter Property="Validation.ErrorTemplate">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <AdornedElementPlaceholder/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TextBox">
+                                <StackPanel>
+                                    <Border Padding="{TemplateBinding Padding}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="3">
+                                        <ScrollViewer x:Name="PART_ContentHost" />
+                                    </Border>
+                                    <ItemsControl ItemsSource="{TemplateBinding Validation.Errors}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Foreground="Red" Text="{Binding ErrorContent}" />
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -51,7 +87,7 @@
             </ComboBox>
             <Label Grid.Row="7">Launch Date:</Label>
             <DatePicker Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=FundLaunch, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Command="{Binding AddFundCommand}" Grid.Row="8" Grid.Column="1" Margin="0,10,0,0">Create Fund</Button>
+            <Button Command="{Binding AddFundCommand}" Grid.Row="8" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Create Fund</Button>
         </Grid>
     </Border>
 </Window>
