--- a/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
@@ -10,6 +10,42 @@
         <TabControl>
             <TabItem Header="New Security Setup">
                 <Grid Margin="1">
+                    <Grid.Resources>
+                        <!-- HERE i can set properties for all similar objects in the grid i.e. textboxes-->
+                        <Style TargetType="TextBox">
+                            <Setter Property="Margin" Value="2" />
+                            <Setter Property="Padding" Value="2" />
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Validation.ErrorTemplate">
+                                <Setter.Value>
+                                    <ControlTemplate>
+                                        <AdornedElementPlaceholder/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="TextBox">
+                                        <StackPanel>
+                                            <Border Padding="{TemplateBinding Padding}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="3">
+                                                <ScrollViewer x:Name="PART_ContentHost" />
+                                            </Border>
+                                            <ItemsControl ItemsSource="{TemplateBinding Validation.Errors}">
+                                                <ItemsControl.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Foreground="Red" Text="{Binding ErrorContent}" />
+                                                    </DataTemplate>
+                                                </ItemsControl.ItemTemplate>
+                                            </ItemsControl>
+                                        </StackPanel>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Grid.Resources>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -48,7 +84,7 @@
                     </ComboBox>
                     <Label Grid.Row="5">ISIN:</Label>
                     <TextBox Text="{Binding ISIN, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
-                    <Button Command="{Binding AddSecurityCommand}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,0">Add Security</Button>
+                    <Button Command="{Binding AddSecurityCommand}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Add Security</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="All Securities">
