--- a/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
+        xmlns:src="clr-namespace:PortfolioAce.Models"
         mc:Ignorable="d"
         Title="Investor Actions" Height="370" Width="440">
+    <Window.Resources>
+        <src:InvertBoolConverter x:Key="invertBoolConverter"/>
+    </Window.Resources>
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
         <TabControl>
             <TabItem Header="Process Investor Action">
@@ -63,6 +67,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Label Grid.Row="1">Type:</Label>
                     <ComboBox Name="cmbType" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=TAType, UpdateSourceTrigger=PropertyChanged}">
@@ -88,7 +93,12 @@
                     <DatePicker Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=TradeDate, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Row="9">Action Settle Date:</Label>
                     <DatePicker Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=SettleDate, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Button Command="{Binding AddInvestorActionCommand}" Grid.Row="10" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Book Action</Button>
+                    <Label Grid.Row="10">Is the Nav Finalised?</Label>
+                    <StackPanel Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+                        <RadioButton Margin="0,7,0,0">Yes</RadioButton>
+                        <RadioButton IsChecked="{Binding Path=isNavFinal, Converter={StaticResource invertBoolConverter}}" Margin="9,7,0,0">No</RadioButton>
+                    </StackPanel>
+                    <Button Command="{Binding AddInvestorActionCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Book Action</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Other Actions">
