--- a/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorActionsWindow.xaml
@@ -6,12 +6,12 @@
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         xmlns:src="clr-namespace:PortfolioAce.Models"
         mc:Ignorable="d"
-        Title="Investor Actions" Height="370" Width="440">
+        Title="Investor Actions" Height="425" Width="533">
     <Window.Resources>
         <src:InvertBoolConverter x:Key="invertBoolConverter"/>
     </Window.Resources>
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
-        <TabControl>
+        <TabControl Style="{StaticResource MaterialDesignTabControl}">
             <TabItem Header="Process Investor Action">
                 <Grid Margin="1">
                     <Grid.Resources>
@@ -95,10 +95,10 @@
                     <DatePicker Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=SettleDate, UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Row="10">Is the Nav Finalised?</Label>
                     <StackPanel Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <RadioButton Margin="0,7,0,0">Yes</RadioButton>
-                        <RadioButton IsChecked="{Binding Path=isNavFinal, Converter={StaticResource invertBoolConverter}}" Margin="9,7,0,0">No</RadioButton>
+                        <RadioButton Style="{DynamicResource MaterialDesignDarkRadioButton}" Margin="0,7,0,0">Yes</RadioButton>
+                        <RadioButton Style="{DynamicResource MaterialDesignDarkRadioButton}" IsChecked="{Binding Path=isNavFinal, Converter={StaticResource invertBoolConverter}}" Margin="9,7,0,0">No</RadioButton>
                     </StackPanel>
-                    <Button Command="{Binding AddInvestorActionCommand}" Grid.Row="11" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}">Book Action</Button>
+                    <Button Command="{Binding AddInvestorActionCommand}" Grid.Row="11" Grid.Column="1" Margin="0,20,0,0" IsEnabled="{Binding CanCreate}">Book Action</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Other Actions">
