--- a/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/SecurityManagerWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Security Manager" Height="370" Width="470">
     <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
-        <TabControl>
+        <TabControl  Style="{StaticResource MaterialDesignTabControl}">
             <TabItem Header="New Security Setup">
                 <Grid Margin="1">
                     <Grid.Resources>
@@ -89,7 +89,9 @@
             </TabItem>
             <TabItem Header="All Securities">
                 <!-- A Datagrid with all securities that are NOT readonly. So they can be edited -->
-                <DataGrid Name="dgAllSecurities" ColumnWidth="*" ItemsSource="{Binding Path=dgSecurities}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
+                <DataGrid Name="dgAllSecurities" ColumnWidth="*" ItemsSource="{Binding Path=dgSecurities}" 
+                          RowBackground="GhostWhite" AlternatingRowBackground="White"
+                          VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Asset Class"  Binding="{Binding AssetClass}"/>
                         <DataGridTextColumn Header="Security Name" Binding="{Binding SecurityName}"/>
